--- a/articles/templates/articles/index.html
+++ b/articles/templates/articles/index.html
@@ -2,7 +2,10 @@
 
 {% block body %}
 
+  <h1>
+    index 페이지
+  </h1>
 
-<h1> index 페이지 </h1>
+  <a href="{% url 'articles:create' %}">새글쓰기</a>
 
 {% endblock %}
