--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -3,13 +3,28 @@
 {% block body %}
 
 <div class="container">
-
-    <h1> {{ user }} 페이지 </h1>
-    <p>닉네임 : {{ user.username }}</p>
-    <p>이메일 : {{ user.email }}</p>
-    <p>이름 : {{ user.last_name }}{{ user.first_name }}</p>
-    {% if user == request.user %}
-    <a href="{% url 'accounts:update' %}" class='btn'>회원 정보수정</a>
-    {% endif %}
+    <h1 class='text-center my-5'> {{ user }} 페이지 </h1>
+    <div class="row">
+        <div class="col-6">
+            이미지
+        </div>
+        <div class="col-6">
+            <p class='text-primary'>팔로워 <span class='text-dark'>{{ user.followers.count }}</span> 팔로잉 <span class='text-dark'>{{ user.followings.count }}</span>
+                {% if request.user != user %}
+                    {% if request.user in user.followers.all %}
+                    <a href="{% url 'accounts:follow' user.pk %}" class='btn btn-outline-primary'>팔로우취소</a>
+                    {% else %}
+                    <a href="{% url 'accounts:follow' user.pk %}" class='btn btn-primary'>팔로우</a>
+                    {% endif %}
+                {% endif %}
+            </p>
+            <p>닉네임 : {{ user.username }}</p>
+            <p>이메일 : {{ user.email }}</p>
+            <p>이름 : {{ user.last_name }}{{ user.first_name }}</p>
+            {% if user == request.user %}
+            <a href="{% url 'accounts:update' %}" class='btn'>회원 정보수정</a>
+            {% endif %}
+        </div>
+    </div>
 </div>
 {% endblock %}
