--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -3,37 +3,36 @@
 {% block body %}
 
 <div class="container">
+    <div class="row justify-content-center">
 
-    <h1> accounts index 페이지 </h1>
-    {% if request.user.is_authenticated %}
-    <a href="{% url 'accounts:detail' request.user.pk %}" class='btn'>{{ request.user }}</a>
-    <a href="{% url 'accounts:logout' %}" class='btn'>로그아웃</a>
-    {% else %}
-    <a href="{% url 'accounts:login' %}" class='btn'>로그인</a>
-    <a href="{% url 'accounts:signup' %}" class='btn'>회원가입</a>
-    {% endif %}
-    <div>
-        <h1>유저 목록</h1>
-        <table class="table">
+
+    <div class="col-9">
+
+        <h1 class='text-center fw-bold my-5'> 회원목록 페이지 </h1>
+
+        <div class='pt-2'>
+            <table class="table">
             <thead>
               <tr>
                 <th scope="col"></th>
                 <th scope="col">닉네임</th>
                 <th scope="col">이름</th>
                 <th scope="col">이메일</th>
-              </tr>
-            </thead>
-            <tbody>
-                {% for u in user %}
-              <tr onclick='location.href="{% url 'accounts:detail' u.pk %}"' style='cursor:pointer'>
+            </tr>
+        </thead>
+        <tbody>
+            {% for u in user %}
+            <tr onclick='location.href="{% url 'accounts:detail' u.pk %}"' style='cursor:pointer'>
                 <th scope="row">{{ forloop.counter }}</th>
                 <td>{{ u.username }}</td>
                 <td>{{ u.last_name }}{{ u.first_name }}</td>
                 <td>{{ u.email }}</td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-    </div>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+</div>
+</div>
 </div>
 {% endblock %}
