--- a/articles/templates/articles/create.html
+++ b/articles/templates/articles/create.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
 {% block body %}
-{% load django_bootstrap5 %}
+  {% load django_bootstrap5 %}
 
-{% bootstrap_css %}
-{% bootstrap_javascript %}
+  {% bootstrap_css %}
+  {% bootstrap_javascript %}
 
-<h1> 글쓰기 </h1>
-<form action="" method="POST" enctype="multipart/form-data">
-  {% csrf_token %}
-  {% bootstrap_form review_form %}
-  {% bootstrap_button "글 작성" button_type="submit" button_class="btn-primary" %}
-</form>
-{% endblock%}
+  <h1>
+    글쓰기
+  </h1>
+  <form action="" method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    {% bootstrap_form review_form %}
+    {% bootstrap_button "글 작성" button_type="submit" button_class="btn-primary" %}
+  </form>
+  {% endblock%}
