--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,12 +3,18 @@
 {% block body %}
 
 <div class="container">
+    <div class="row justify-content-center">
+        <div class="col-9">
 
-    <h1> accounts login 페이지 </h1>
-    <form action="{% url 'accounts:login' %}" method='POST'>
-        {% csrf_token %}
-        {% bootstrap_form form %}
-        <input type="submit" value="로그인" class="btn">
-    </form>
+            <h1 class='text-center fw-bold my-5'> Login 페이지 </h1>
+            <form action="" method='POST'>
+                {% csrf_token %}
+                {% bootstrap_form form %}
+                <div class="d-grid my-5">
+                    <input type="submit" value="로그인" class="btn btn-primary">
+                </div>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
