--- a/articles/templates/articles/detail.html
+++ b/articles/templates/articles/detail.html
@@ -3,80 +3,90 @@
 {% load static %}
 
 {% block body %}
-<div class="container">
-<div class='row justify-content-center'>
-  <div class="col-11">
-    <h1 class='text-center fw-bold mt-4 mb-5'>리뷰 조회</h1>
-    <p>리뷰제목:{{ review.title }}</p>
-    <p>작성자:{{ review.user }}</p>
-    <p>리뷰내용:{{ review.content }}</p>
-    <p>영화 제목:{{ review.movie_name }}</p>
-    <p>평점:{{ review.grade }}</p>
-    
-    
-    
-    <div class=" d-flex justify-content-end gap-2 align-content-center my-4">
-      
-      {% if review.user == request.user %}
-    <a href="{% url 'articles:delete' review.pk %}" class="btn btn-warning">삭제</a>
-    <a href="{% url 'articles:update' review.pk %}" class="btn btn-danger">수정</a>
-    {% endif %}
-    
-    {% if request.user.is_authenticated %}
-    <a href="{% url 'articles:like' review.pk %}" class="btn btn-primary">
-      {% if request.user in review.like_users.all %}
-      좋아요 취소 <i class="bi bi-heart-fill"></i>
-      {% else %}  
-       좋아요 <i class="bi bi-heart"></i>
-     {% endif %}
-    </a> <btn class='btn btn-light'> 좋아요 {{ review.like_users.count }}</btn>
-    {% else %}
-    <i class="bi bi-heart-fill like-heart"></i>
-    <span> 좋아요 수 : {{ review.like_users.count }}</span>
-    <br>
-    <span> 로그인 하세요</span>
-    {% endif%}
-  </div>
-  <form action="{% url 'articles:comment_create' review.pk %}" method="POST" class='my-3'>
-    {% csrf_token %}
-    <div class="d-flex justify-content-center gap-2">
-      <div class="col-12 col-md-10 px-0">
-        {% bootstrap_form comment_form layout='inline'%}
-      </div>
-      <div class="d-grid col-12 col-md-2  px-0">
-        {% bootstrap_button button_type="submit" content="등록" button_class="btn-primary" %}
+  <div class="container">
+    <div class='row justify-content-center'>
+      <div class="col-11">
+        <h1 class='text-center fw-bold mt-4 mb-5'>리뷰 조회</h1>
+        <p>리뷰제목:{{ review.title }}</p>
+        <p>작성자:{{ review.user }}</p>
+        <p>리뷰내용:{{ review.content }}</p>
+        <p>영화 제목:{{ review.movie_name }}</p>
+        <p>평점:{{ review.grade }}</p>
+
+        <div class=" d-flex justify-content-end gap-2 align-content-center my-4">
+
+          {% if review.user == request.user %}
+            <a href="{% url 'articles:delete' review.pk %}" class="btn btn-warning">삭제</a>
+            <a href="{% url 'articles:update' review.pk %}" class="btn btn-danger">수정</a>
+          {% endif %}
+
+          {% if request.user.is_authenticated %}
+            <a href="{% url 'articles:like' review.pk %}" class="btn btn-primary">
+              {% if request.user in review.like_users.all %}
+                좋아요 취소
+                <i id="like-btn" class="bi bi-heart-fill"></i>
+              {% else %}
+                좋아요
+                <i id="like-btn" class="bi bi-heart"></i>
+              {% endif %}
+            </a>
+            <btn class='btn btn-light'>
+              좋아요
+              {{ review.like_users.count }}</btn>
+          {% else %}
+            <i class="bi bi-heart-fill like-heart"></i>
+            <span>
+              좋아요 수 :
+              {{ review.like_users.count }}</span>
+            <br>
+            <span>
+              로그인 하세요</span>
+            {% endif%}
+          </div>
+          <form action="{% url 'articles:comment_create' review.pk %}" method="POST" class='my-3'>
+            {% csrf_token %}
+            <div class="d-flex justify-content-center gap-2">
+              <div class="col-12 col-md-10 px-0">
+                {% bootstrap_form comment_form layout='inline'%}
+              </div>
+              <div class="d-grid col-12 col-md-2  px-0">
+                {% bootstrap_button button_type="submit" content="등록" button_class="btn-primary" %}
+              </div>
+            </div>
+          </form>
+
+          <table class='table'>
+            <thead>
+              <tr>
+                <th scope='col'>User</th>
+                <th scope='col'>Comment</th>
+                <th scope='col'>수정</th>
+                <th scope='col'>삭제</th>
+
+              </tr>
+            </thead>
+            <tbody>
+              {% for comment in comments %}
+                <tr>
+                  <td>{{ comment.user.username }}</td>
+                  <td>{{ comment.content }}</td>
+                  <td>
+                    <a href="{% url 'articles:comments_update' review.pk comment.pk %}" class="btn btn-primary">수정</a>
+                  </td>
+                  <td>
+                    <a href="{% url 'articles:comments_delete' review.pk comment.pk %}" class="btn btn-danger">삭제</a>
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+
+          </table>
+        </div>
       </div>
     </div>
-  </form>
-  
-  <table class='table'>
-    <thead>
-      <tr>
-        <th scope='col'>User</th>
-        <th scope='col'>Comment</th>
-        <th scope='col'>수정</th>
-        <th scope='col'>삭제</th>
-        
-      </tr>
-    </thead>
-    <tbody>
-      {% for comment in comments %}
-      <tr>
-        <td>{{ comment.user.username }}</td>
-        <td>{{ comment.content }}</td>
-        <td>
-          <a href="{% url 'articles:comments_update' review.pk comment.pk %}" class="btn btn-primary">수정</a>
-        </td>
-        <td>
-          <a href="{% url 'articles:comments_delete' review.pk comment.pk %}" class="btn btn-danger">삭제</a>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-
-  </table>
-</div>
-</div>
-</div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+      const likeBtn = document.querySelector('#like-btn')
+      likebtn.addEventListener('click', function () {})
+    </script>
   {% endblock %}
-  
