--- a/accounts/templates/accounts/detail.html
+++ b/accounts/templates/accounts/detail.html
@@ -6,7 +6,6 @@
     <div class="row justify-content-center">
         <div class="col-10 row">
             <h1 class='text-center my-5 fw-bold'> {{ user }} 페이지 </h1>
-
             <div class="col-12 col-md-6 mb-5">
                 {% if user.profile.image %}
                 <img src="{{ user.profile.image.url }}" alt="{{ user.profile.image }}" class='mb-2'>
@@ -18,7 +17,7 @@
                 {% endif %}
                 {% if request.user == user %}
                 <div>
-                    <a href="{% url 'accounts:profile' request.user.pk %}" class='btn btn-primary'>프로필 업데이트</a>
+                    <a href="{% url 'accounts:profile' request.user.pk %}" class='btn btn-outline-dark'>프로필 업데이트</a>
                 </div>
                 {% endif %}
             </div>
@@ -29,9 +28,9 @@
                     <div>
                         {% if request.user != user %}
                         {% if request.user in user.followers.all %}
-                        <a href="{% url 'accounts:follow' user.pk %}" class='btn btn-outline-primary py-1'>팔로우취소</a>
+                        <a href="{% url 'accounts:follow' user.pk %}" class='btn btn-outline-dark py-1'>팔로우취소</a>
                         {% else %}
-                        <a href="{% url 'accounts:follow' user.pk %}" class='btn btn-primary py-1'>팔로우</a>
+                        <a href="{% url 'accounts:follow' user.pk %}" class='btn btn-outline-dark py-1'>팔로우</a>
                         {% endif %}
                         {% endif %}
                     </div>
@@ -40,7 +39,7 @@
                 <p>이메일 : {{ user.email }}</p>
                 <p>이름 : {{ user.last_name }}{{ user.first_name }}</p>
                 {% if user == request.user %}
-                <a href="{% url 'accounts:update' %}" class='btn btn-primary'>회원 정보수정</a>
+                <a href="{% url 'accounts:update' %}" class='btn btn-outline-dark'>회원 정보수정</a>
                 {% endif %}
             </div>
         </div>
