--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -4,14 +4,11 @@
 
 <div class="container">
     <div class="row justify-content-center">
-
-
     <div class="col-9">
 
         <h1 class='text-center fw-bold my-5'> 회원목록 페이지 </h1>
-
         <div class='pt-2'>
-            <table class="table">
+            <table class="table align-middle">
             <thead>
               <tr>
                 <th scope="col"></th>
