--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -11,7 +11,7 @@
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 <div class="d-grid my-5">
-                    <input type="submit" value="로그인" class="btn btn-primary">
+                    <input type="submit" value="로그인" class="btn btn-outline-dark">
                 </div>
             </form>
         </div>
