--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,7 +4,7 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-9">
+        <div class="col-12 col-sm-10 col-md-9 col-lg-7 col-xl-6 col-xxl-5 my-5">
 
             <h1 class='text-center fw-bold my-5'> Login 페이지 </h1>
             <form action="" method='POST'>
